<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.fiid.agfid.profile.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/union" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/pendekar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="260dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:hint="Nama"
                        android:inputType="text"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_local_post_office_black_24dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_https_black_24dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextSekolah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_store_black_24dp"
                        android:hint="Sekolah"
                        android:inputType="text"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextKelas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_school_black_24dp"
                        android:hint="Kelas"
                        android:inputType="text"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/buttonRegister"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/back_to_login"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
